[package]
name = "fup-io-balancer"
version = "0.1.0"
edition = "2021"

default-run = "server"
build = "build.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
clap = { version = "=4.1.10", default-features = true, features = ["std", "derive", "unicode"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
prost = "0.13.1"
tonic = "0.13.1"
futures = "0.3.31"
dashmap = "6.1.0"
# prost and tonic versions must match!

[build-dependencies]
tonic-build = "0.13.1"
